# news_search

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
src/news_search/: __init__.py  news_scraper.py
src/news_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/news_search/backends/: __init__.py  google_news.py  news_api.py  news_backend.py
